apply plugin: 'com.android.application'
apply plugin: 'me.tatarka.retrolambda'
apply plugin: 'com.neenbedankt.android-apt'

android {
    compileSdkVersion 25
    buildToolsVersion '25.0.1'

    defaultConfig {
        applicationId "com.hana053.micropost"
        minSdkVersion 19
        targetSdkVersion 25
        versionCode 1
        versionName "1.0.0"
        buildConfigField('String', 'API_URL', getProperty("micropost.apiUrl"))
    }
    signingConfigs {
        release {
            storeFile file("myreleasekey.jks")
            keyAlias "MyReleaseKey"
            storePassword System.getenv("KSTOREPWD")
            keyPassword System.getenv("KEYPWD")
        }
    }
    buildTypes {
        debug {
            applicationIdSuffix ".debug"
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    lintOptions {
        disable 'InvalidPackage'
    }
    dataBinding {
        enabled = true
    }
}

dependencies {
    provided 'javax.annotation:jsr250-api:1.0'
    provided "org.projectlombok:lombok:$lombok_version"

    apt "org.projectlombok:lombok:$lombok_version"
    apt "com.google.dagger:dagger-compiler:$dagger_version"
    apt "org.parceler:parceler:$parceler_version"
    apt "com.jakewharton:butterknife-compiler:$butterknife_version"

    compile "com.android.support:appcompat-v7:$android_support_version"
    compile "com.android.support:design:$android_support_version"
    compile 'io.reactivex:rxandroid:1.2.1'
    compile 'io.reactivex:rxjava:1.2.3'
    compile 'com.annimon:stream:1.1.4'
    compile "com.google.dagger:dagger:$dagger_version"
    compile 'com.jakewharton.timber:timber:4.1.2'
    compile "com.jakewharton:butterknife:$butterknife_version"
    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
    compile "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
    compile "com.squareup.retrofit2:converter-moshi:$retrofit_version"
    compile 'com.squareup.okhttp3:okhttp:3.4.2'
    compile 'com.squareup.picasso:picasso:2.5.2'
    compile "org.parceler:parceler-api:$parceler_version"
    compile 'org.greenrobot:eventbus:3.0.0'
    compile 'com.github.curioustechizen.android-ago:library:1.3.2'
    compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '4.27'

    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'

    testCompile 'junit:junit:4.12', {
        transitive = false
    }
    testCompile 'org.hamcrest:hamcrest-all:1.3'
    testCompile 'org.mockito:mockito-core:2.2.26'
    testCompile "org.robolectric:robolectric:$robolectric_version"
    testCompile "org.robolectric:shadows-support-v4:$robolectric_version"
    testCompile 'com.github.fabioCollini:DaggerMock:0.6.2'
}

buildscript {
    ext {
        android_support_version = '25.0.1'
        retrofit_version = '2.1.0'
        dagger_version = '2.7'
        parceler_version = '1.1.6'
        lombok_version = '1.16.10'
        robolectric_version = '3.1.1'
        butterknife_version = '8.4.0'
    }
    repositories {
        mavenCentral()
    }
}
repositories {
    mavenCentral()
}
